@@ -37,6 +37,7 @@ Version 1.1.9 work in progress
 - Enh #2811: Fully automated CLDR data update, updated data to 2.0.1. Added getLanguageID, getScriptID, getTerritoryID, getRegionID, getLocaleDisplayName, getLanguage, getScript, getTerritory methods to CLocale (kshaw, Sam Dark)
 - Enh #2823: Added autocomplete for Gii "Table Name" field (Sam Dark)
 - Enh #2929: Added forceDownload to xSendFile options to choose between attachment and inline disposition. (mdomba)
+- Enh #2981: Added CHtml::liveEvents to set the default global style for attaching jQuery event handlers. (mdomba, Sam Dark, Ekstazi)
 - Enh: Documented component accessors with @property for significantly better IDE autocomplete (Sam Dark, Detonator, Athari)
 - Enh: Added CWebUser->loginRequiredAjaxResponse - value to be returned for ajax calls in case the user session has expired (mdomba)
 - Enh: CFileCache::get() does now suppress a possible PHP error which might occur on concurrent requests (Y!!)
@@ -44,6 +45,7 @@ Version 1.1.9 work in progress
 - Enh: removed the check for ajax call in CErrorHandler::handleException() (mdomba)
 - Enh: CAssetManager now generates different hash for files/directories with different mtime (Sam Dark)
 - Enh: Yii error screen will now display proper message like error/warning/notice (mdomba)
+- Enh: CHtml::clientchange() now uses the new jQuery on() method for event binding (mdomba)
 
 Version 1.1.8 June 26, 2011
 ---------------------------
